--- a/index.html
+++ b/index.html
@@ -24,12 +24,14 @@
             <img id="middle" src="" alt="">
             <img id="right" src="" alt="">
         </section>
-        <h2 id="h2"><!--Here is your vote:--></h2>
+        <div id="h2"><!--Here is your vote:--></div>
+        <div class="canvas"><canvas id="voteChart"></canvas></div>
         <ul id="summary"></ul>
     </main>
     <footer>
         <p>Bus Mall &copy; 2020 &middot; All copyright are reserved</p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
     <script src="js/app.js"></script>
 </body>
 
