adding comments on js

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <img id="middle" src="" alt="">
             <img id="right" src="" alt="">
         </section>
-        <div id="h2"><!--Here is your vote:--></div>
+        <div id="h2"></div>
         <div class="canvas"><canvas id="voteChart"></canvas></div>
         <ul id="summary"></ul>
     </main>
